@@ -27,6 +27,9 @@ Test
 Beta release
 * remove deprecated functions in libsmraw_legacy.[ch]
 
+20111009
+* small changes to smrawmount
+
 20111008
 * updated configure.as and m4 files
 * updated README files
